--- a/LECTURE11.Rmd
+++ b/LECTURE11.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Declining-population paradigm"
 author: "NRES 470/670"
-date: "Spring 2023"
+date: "Spring 2024"
 output: 
   html_document: 
     theme: spacelab
@@ -79,7 +79,7 @@ In this paper, Caughley coined the terms 'small population paradigm' and 'declin
 
 **Q**: Can you detect Caughley's opinion in the above quote? 
 
-**Q**: What do you think? Do you agree with Caughley? Take a moment to look over the paper and please comment on PointSolutions!
+**Q**: What do you think? Do you agree with Caughley? Take a moment to look over the paper and please comment on Top Hat!
 
 
 ### In-Class Exercise: Deterministic threats
@@ -106,7 +106,7 @@ Make sure the model is set to run for 50 years.
 
 Why doesn't the population decline to extinction? What has the harvest process done in this case?   
 
-**Q**: What if you change the harvest rate- make it even more extreme? Starting at an abundance of 200, what is the expected final abundance (after 50 years) if the harvest rate is 40% and the variation (standard deviation) in harvest rate is 20%?   [PointSolutions]
+**Q**: What if you change the harvest rate- make it even more extreme? Starting at an abundance of 200, what is the expected final abundance (after 50 years) if the harvest rate is 40% and the variation (standard deviation) in harvest rate is 20%?   [Top Hat]
 
 **Let's add a habitat loss process!**
 
@@ -128,7 +128,7 @@ Note that we are modeling habitat loss as a decline in carrying capacity. To do 
 
 - Try changing the habitat loss process to be 5 *individuals* per year (absolute habitat loss). What happens?
 
-- Try changing the habitat loss process to be 5 *individuals* per year (absolute habitat loss) AND the harvest process to be 35 *individuals* per year (absolute harvest rate). What happens?   [PointSolutions]
+- Try changing the habitat loss process to be 5 *individuals* per year (absolute habitat loss) AND the harvest process to be 35 *individuals* per year (absolute harvest rate). What happens?   [Top Hat]
 
 **Q**: Try different combinations of deterministic threats (competing threats!). Can you identify some combinations that are *synergistic*- that is, that affect population decline or extinction risk more than simply adding the effects of each threat in isolation??  
 
